fix 19394 the dark mode input tag color issue

--- a/ui/src/app/shared/components/tags-input/tags-input.scss
+++ b/ui/src/app/shared/components/tags-input/tags-input.scss
@@ -51,5 +51,9 @@
             right: 2px;
             top: 8px;
         }
+
+        .theme-dark & {
+            background: $argo-color-gray-5;
+        }
     }
 }
